# satori-video-sdk-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.py  upload.sh
cmake/: Findlibrtmvideo.cmake  beast.cmake  boost.cmake  conan.cmake  darknet.cmake  ffmpeg-js.patch  ffmpeg.cmake  gsl.cmake  libcbor.cmake  libvpx.cmake  openssl.cmake  rapidjson.cmake
conan/: Makefile  conan.cmake
decoder/: CMakeLists.txt  conanfile.py
decoder/src/: base64.cpp  base64.h  decoder.cpp  decoder.h
docs/: build_bot.md  building_sdk.md  concepts.md  contributing.md  message_formats.md  prerequisites.md  reference.md  tasks.md  tutorial.md  using_sdk.md
include/librtmvideo/: base.h  cbor_cmd.h  cbor_dump.h  cbor_map.h  cbor_tools.h  data.h  decoder.h  rtmpacket.h  rtmvideo.h  tele.h  video_bot.h  video_source.h
include/librtmvideo/opencv/: opencv_bot.h
include/satorivideo/: base.h  tele.h  video_bot.h
include/satorivideo/multiframe/: bot.h
include/satorivideo/opencv/: opencv_bot.h  opencv_impl.h  opencv_utils.h
player/: CMakeLists.txt  Makefile
player/src/: main.cpp
src/: asio_streams.h  asio_streams_impl.h  av_filter.cpp  av_filter.h  avutils.cpp  avutils.h  base64.cpp  base64.h  bot_environment.cpp  bot_environment.h  bot_instance.cpp  bot_instance.h  bot_instance_builder.cpp  bot_instance_builder.h  camera_source.cpp  cbor_cmd.cpp  cbor_dump.cpp  cbor_json.cpp  cbor_json.h  cbor_map.cpp  cbor_tools.cpp  cbor_tools.h  channel.h  cli_streams.cpp  cli_streams.h  data.cpp  data.h  decode_image_frames.cpp  decoder.cpp  decoder.h  deferred.h  error.cpp  error.h  error_or.cpp  error_or.h  file_sink.h  file_source.cpp  flow_decoder.cpp  flow_decoder.h  flow_json_decoder.cpp  (+90 more)
src/clitools/: player.cpp  publisher.cpp  recorder.cpp
src/opencv/: opencv_bot.cpp  opencv_utils.cpp
src/streams/: asio_streams.h  asio_streams_impl.h  buffered_worker.h  channel.h  deferred.h  error_or.h  signal_breaker.cpp  signal_breaker.h  stream_error.cpp  stream_error.h  streams.cpp  streams.h  streams_impl.h  threaded_worker.h  type_traits.h
test/: av_filter_test.cpp  avutils_test.cpp  bot_instance_test.cpp  cbor_to_json_test.cpp  cbor_tools_test.cpp  data_test.cpp  decode_image_frames_test.cpp  deferred_test.cpp  empty_bot.cpp  encoding_test.cpp  error_or_test.cpp  file_source_test.cpp  flow_decoder_test.cpp  json_to_cbor_test.cpp  ostream_sink_test.cpp  producer_consumer_queue_test.cpp  streams_test.cpp  test_bot.cpp  test_configure_bot.cpp  threadutils_test.cpp  vp9_encoder_test.cpp  vp9_transcoder_test.cpp
test/bots/: empty_bot.cpp  empty_opencv_bot.cpp  test_bot.cpp  test_configure_bot.cpp  test_opencv_bot.cpp
test_data/: config.json  h264_320x180.frame  h264_320x180.metadata  jpeg_320x180.frame  mjpeg_320x180.frame  test.replay  test.replay.metadata  vp9_320x180.frame
test_package/: CMakeLists.txt  conanfile.py  test.cpp
